--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,359 +1,13 @@
----
+# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-
+# Use a package of configuration called an orb.
 orbs:
-  lighthouse-check: foo-software/lighthouse-check@0.0.8
-
+  # Declare a dependency on the welcome-orb
+  welcome: circleci/welcome-orb@0.4.1
+# Orchestrate or schedule a set of jobs
 workflows:
-  main:
+  # Name the workflow "welcome"
+  welcome:
+    # Run the welcome/run job in its own container
     jobs:
-      - php73-tests
-      - frontend-tests
-      - acceptance-tests
-      - a11y-tests
-      - create-zip:
-          filters:
-            tags:
-              only: /^v\p{Digit}+\.\p{Digit}+.*/
-      - request-instance:
-          context: org-global
-          requires:
-            - create-zip
-      - instance-ready:
-          type: approval
-          requires:
-            - request-instance
-      - lighthouse:
-          requires:
-            - instance-ready
-      - publish-zip:
-          context: org-global
-          requires:
-            - create-zip
-          filters:
-            branches:
-              ignore: /.*/
-            tags:
-              only: /^v\p{Digit}+\.\p{Digit}+.*/
-
-job-references:
-  mysql_image: &mysql_image
-    circleci/mysql:5.7
-
-  docker_auth: &docker_auth
-    username: $DOCKERHUB_USERNAME
-    password: $DOCKERHUB_PASSWORD
-
-  setup_environment: &setup_environment
-    name: "Setup Environment Variables"
-    command: |
-      echo "export PATH=$HOME/.composer/vendor/bin:$PATH" >> $BASH_ENV
-      source /home/circleci/.bashrc
-
-  install_dependencies: &install_dependencies
-    name: "Install Dependencies"
-    command: composer install
-
-  php_job: &php_job
-    environment:
-      - WP_TESTS_DIR: "/tmp/wordpress-tests-lib"
-      - WP_CORE_DIR: "/tmp/wordpress/"
-    steps:
-      - checkout
-      - run: *setup_environment
-      - run: *install_dependencies
-      - run:
-          name: "phpcs"
-          command: |
-            mkdir -p /tmp/test-results/phpcs
-            vendor/bin/phpcs --config-set installed_paths vendor/wp-coding-standards/wpcs
-            vendor/bin/phpcs --report=junit --report-file=/tmp/test-results/phpcs/$CIRCLE_STAGE.xml
-      - run:
-          name: "phpunit"
-          when: always
-          command: |
-            mkdir -p /tmp/test-results/phpunit
-            rm -rf $WP_TESTS_DIR $WP_CORE_DIR
-            bash bin/install-wp-tests.sh wordpress_test root '' 127.0.0.1 latest
-            XDEBUG_MODE=coverage vendor/bin/phpunit --log-junit /tmp/test-results/phpunit/$CIRCLE_STAGE.xml --coverage-html /tmp/coverage-report --coverage-text
-      - store_test_results:
-          path: /tmp/test-results
-      - store_artifacts:
-          path: /tmp/coverage-report
-
-  p4_instance_conf: &p4_instance_conf
-    docker:
-      - image: greenpeaceinternational/p4-builder:latest
-        auth: &docker_auth
-    working_directory: /home/circleci/
-    environment:
-      WP_VERSION: 5.4.2
-      APP_HOSTNAME: www.planet4.test
-      APP_HOSTPATH:
-      CLOUDSQL_INSTANCE: p4-develop-k8s
-      CONTAINER_PREFIX: planet4-base
-      GOOGLE_PROJECT_ID: planet-4-151612
-      HELM_NAMESPACE: develop
-      TYPE: "Build"
-      WP_DB_NAME: planet4-base_wordpress
-      WP_TITLE: Greenpeace Base Development
-
-commands:
-  install-instance:
-    steps:
-      - setup_remote_docker:
-          docker_layer_caching: true
-      - checkout:
-          path: /home/circleci/checkout/planet4-master-theme
-      - run:
-          name: Build - Configure
-          command: |
-            mkdir -p /tmp/workspace/var
-            mkdir -p /tmp/workspace/src
-            echo "${CIRCLE_BUILD_NUM}" > /tmp/workspace/var/circle-build-num
-      - run:
-          name: Build - Build containers
-          working_directory: /home/circleci
-          command: |
-            if [ -n "$CIRCLE_PR_NUMBER" ]; then
-              BRANCH=contrib
-              git --git-dir=/home/circleci/checkout/planet4-master-theme/.git checkout -b contrib
-              echo "Using tmp branch contrib for fork PR $CIRCLE_PR_NUMBER"
-            else
-              BRANCH="${CIRCLE_BRANCH}"
-              echo "Master theme branch is ${CIRCLE_BRANCH}"
-            fi
-            MASTER_THEME_BRANCH=dev-${BRANCH}#${CIRCLE_SHA1} \
-            PLUGIN_GUTENBERG_BLOCKS_BRANCH=dev-master \
-            MERGE_SOURCE=git@github.com:greenpeace/planet4-base-fork.git \
-            MERGE_REF=develop \
-            make ci
-      - run:
-          name: Test - Clone planet4-docker-compose
-          command: |
-            git clone --depth 1 https://github.com/greenpeace/planet4-docker-compose
-
-  run-tests:
-    parameters:
-      test-name:
-        type: string
-      test-command:
-        type: string
-      extract-command:
-        type: string
-    steps:
-      - run:
-          name: << parameters.test-name >>
-          command: << parameters.test-command >>
-      - run:
-          name: Test - Extract test artifacts
-          when: always
-          command: << parameters.extract-command >>
-      - persist_to_workspace:
-          root: /tmp/workspace
-          paths:
-            - var
-      - store_test_results:
-          path: planet4-docker-compose/artifacts
-      - store_artifacts:
-          path: planet4-docker-compose/artifacts
-      - run:
-          name: Build - Notify failure
-          when: on_fail
-          command: notify-job-failure.sh
-
-jobs:
-  php73-tests:
-    <<: *php_job
-    docker:
-      - image: greenpeaceinternational/p4-unit-tests:php7.3
-        auth: &docker_auth
-      - image: *mysql_image
-        auth: &docker_auth
-
-  frontend-tests:
-    docker:
-      - image: greenpeaceinternational/p4-unit-tests:nodelts
-        auth: &docker_auth
-    steps:
-      - checkout
-      - run:
-          name: Lint CSS
-          command: stylelint "assets/src/scss/**/*.scss"
-      - run:
-          name: Install eslint react plugin
-          command: PUPPETEER_SKIP_DOWNLOAD=true PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true npm install eslint-plugin-react
-      - run:
-          name: Lint JS
-          command: eslint assets/**/*.js
-      - store_test_results:
-          path: /tmp/test-results
-
-  acceptance-tests:
-    <<: *p4_instance_conf
-    steps:
-      - install-instance
-      - run-tests:
-          test-name: Test - Run acceptance tests
-          test-command: |
-            export BUILD_TAG="build-$(cat /tmp/workspace/var/circle-build-num)"
-            export APP_IMAGE=gcr.io/planet-4-151612/planet4-base-app:${BUILD_TAG}
-            export OPENRESTY_IMAGE=gcr.io/planet-4-151612/planet4-base-openresty:${BUILD_TAG}
-            make -C planet4-docker-compose ci test
-          extract-command: |
-            export BUILD_TAG="build-$(cat /tmp/workspace/var/circle-build-num)"
-            export APP_IMAGE=gcr.io/planet-4-151612/planet4-base-app:${BUILD_TAG}
-            export OPENRESTY_IMAGE=gcr.io/planet-4-151612/planet4-base-openresty:${BUILD_TAG}
-            make -C planet4-docker-compose ci-extract-artifacts
-
-  a11y-tests:
-    <<: *p4_instance_conf
-    steps:
-      - install-instance
-      - run-tests:
-          test-name: Test - Run accessibility tests
-          test-command: |
-            export BUILD_TAG="build-$(cat /tmp/workspace/var/circle-build-num)"
-            export APP_IMAGE=gcr.io/planet-4-151612/planet4-base-app:${BUILD_TAG}
-            export OPENRESTY_IMAGE=gcr.io/planet-4-151612/planet4-base-openresty:${BUILD_TAG}
-            make -C planet4-docker-compose ci test-pa11y-ci
-          extract-command: |
-            export BUILD_TAG="build-$(cat /tmp/workspace/var/circle-build-num)"
-            export APP_IMAGE=gcr.io/planet-4-151612/planet4-base-app:${BUILD_TAG}
-            export OPENRESTY_IMAGE=gcr.io/planet-4-151612/planet4-base-openresty:${BUILD_TAG}
-            make -C planet4-docker-compose ci-extract-a11y-artifacts
-            errors=$(jq '.errors' planet4-docker-compose/artifacts/pa11y/pa11y-ci-results.json)
-            if [ "$errors" -gt 0 ]; then echo "$errors errors found, see report in artifacts."; else echo "No errors, report available in artifacts."; fi
-
-  request-instance:
-    environment:
-      GOOGLE_PROJECT_ID: planet-4-151612
-    docker:
-      - image: greenpeaceinternational/p4-builder:latest
-        auth: &docker_auth
-    steps:
-      - attach_workspace:
-          at: /tmp/workspace
-      - run:
-          name: "Check if this is for an open PR."
-          command: |
-            if [[ $(cat /tmp/workspace/commit-message) =~ ^Merge[[:space:]]pull[[:space:]]request[[:space:]]\#([[:digit:]]+) ]]; then
-              echo "https://github.com/greenpeace/planet4-master-theme/pull/${BASH_REMATCH[1]}" > /tmp/workspace/pr
-              echo "MERGED PR ID: ${BASH_REMATCH[1]}"
-              echo true > /tmp/workspace/is_merge_commit
-            else
-              if [ -z "$CIRCLE_PULL_REQUEST" ];then
-                echo echo "No PR, skipping instance deploy"
-                exit 1
-              fi
-              echo false > /tmp/workspace/is_merge_commit
-              echo $CIRCLE_PULL_REQUEST > /tmp/workspace/pr
-            fi
-      - run:
-          name: "Python script deps"
-          command: |
-            pip3 install requests requests_oauthlib
-      - run:
-          name: "Book instance"
-          command: |
-            JIRA_USERNAME=planet4 book-test-instance.py \
-            --pr-url $(cat /tmp/workspace/pr) \
-            --results /tmp/workspace/booking.json >/tmp/workspace/test-instance
-            echo "https://app.circleci.com/pipelines/github/greenpeace/planet4-test-$(cat /tmp/workspace/test-instance)/"
-      - run: activate-gcloud-account.sh
-      - run:
-          name: "Put zip in cloud storage"
-          command: |
-            filename="planet4-master-theme.zip"
-            echo "planet4-packages/planet4-master-theme/${CIRCLE_SHA1}.zip" > /tmp/workspace/zip-path
-            gs_path="gs://$(cat /tmp/workspace/zip-path)"
-            gsutil -q stat "$gs_path" || gsutil cp "/tmp/workspace/$filename" "$gs_path"
-      - run:
-          name: "Commit to test instance repo"
-          command: trigger_test_instance.sh planet4-master-theme $(cat /tmp/workspace/is_merge_commit)
-      - persist_to_workspace:
-          root: /tmp/workspace
-          paths:
-            - test-instance
-            - booking.json
-
-  lighthouse:
-    executor: lighthouse-check/default
-    steps:
-      - attach_workspace:
-          at: /tmp/workspace
-      - lighthouse-check/audit:
-          urls: |
-            https://www-dev.greenpeace.org/test-$(cat /tmp/workspace/test-instance)/,\
-            https://www-dev.greenpeace.org/test-$(cat /tmp/workspace/test-instance)/,\
-            https://www-dev.greenpeace.org/test-$(cat /tmp/workspace/test-instance)/,\
-            https://www-dev.greenpeace.org/test-$(cat /tmp/workspace/test-instance)/act/,\
-            https://www-dev.greenpeace.org/test-$(cat /tmp/workspace/test-instance)/act/,\
-            https://www-dev.greenpeace.org/test-$(cat /tmp/workspace/test-instance)/act/,\
-            https://www-dev.greenpeace.org/test-$(cat /tmp/workspace/test-instance)/explore/,\
-            https://www-dev.greenpeace.org/test-$(cat /tmp/workspace/test-instance)/explore/,\
-            https://www-dev.greenpeace.org/test-$(cat /tmp/workspace/test-instance)/explore/\
-
-  create-zip:
-    docker:
-      - image: mhart/alpine-node:14
-        auth: &docker_auth
-    steps:
-      - run: apk add zip git openssh-client python2 make g++
-      - checkout
-      - run: git submodule init && git submodule update
-      - run: mkdir -p /tmp/workspace/
-      - run:
-          name: "Extract commit message"
-          command: git log --format=%B -n 1 $CIRCLE_SHA1 > /tmp/workspace/commit-message
-      - run: PUPPETEER_SKIP_DOWNLOAD=true PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true npm ci
-      - run: npm run build
-      - run:
-          name: "Remove files we don't want in the zip file."
-          command: rm -rf .circleci .git .githooks assets/src bin tests
-      # Exclude node_modules instead of removing, which takes a long time (lots of small files).
-      - run:
-          name: "Create zip file"
-          command: zip -r /tmp/workspace/planet4-master-theme.zip . -x "node_modules/*"
-      - run:
-          name: "Zip file size sanity check"
-          command: |
-            ls -lh /tmp/workspace/planet4-master-theme.zip
-            if [ $(wc -c </tmp/workspace/planet4-master-theme.zip) -ge 5000000 ]; then
-              echo "Zip file size exceeds 5MB, probably something went wrong."
-              exit 1
-            fi
-      - persist_to_workspace:
-          root: .
-          paths:
-            - composer.json
-      - persist_to_workspace:
-          root: /tmp/workspace
-          paths:
-            - planet4-master-theme.zip
-            - commit-message
-
-  publish-zip:
-    docker:
-      - image: mhart/alpine-node:14
-        auth: &docker_auth
-    steps:
-      - attach_workspace:
-          at: /tmp/workspace
-      - run: apk add curl jq
-      - run:
-          name: "Get upload url for this tag"
-          command: |
-            curl https://api.github.com/repos/greenpeace/planet4-master-theme/releases/tags/${CIRCLE_TAG} |
-                jq -r .upload_url |
-                sed 's/{.*}/?name=planet4-master-theme.zip/' > /tmp/workspace/upload_url
-            cat /tmp/workspace/upload_url
-      - run:
-          name: "Upload zip file"
-          command: |
-            curl \
-                --fail \
-                -H "Authorization: token ${GITHUB_RELEASES_TOKEN}" \
-                -H "Content-Type: application/zip" \
-                --data-binary @/tmp/workspace/planet4-master-theme.zip \
-                "$(cat /tmp/workspace/upload_url)" | jq
+      - welcome/run
