--- a/.stylelintrc
+++ b/.stylelintrc
@@ -65,7 +65,7 @@
     "selector-pseudo-element-case": "lower",
     "selector-type-case": "lower",
     "selector-type-no-unknown": [true, {
-	  "ignoreTypes": ["/^--[a-z]\\w*(--?[a-z0-9]+)*--$/"]
+	  "ignoreTypes": ["/^--[a-z]\\w*(--?[a-z0-9]+)*--$/", "lite-youtube"]
 	}],
     "selector-max-empty-lines": 0,
 
