--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ workflows:
       - php73-tests
       - frontend-tests
       - acceptance-tests
-      - a11y-tests
+      #- a11y-tests
       - create-zip:
           filters:
             tags:
