Remove browsable theme styleguide
Since we have Design System in place, we no longer require a browsable
styleguide, which can also be confusing. Removed all kss code and CI
jobs that rely on a url to run.

Also moved svg icons to master-theme.

Kept scss code in src because:
a. avoid changing app repos that use that
b. it actually makes sense

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,9 +4,14 @@ version: 2.1
 defaults: &defaults
   docker:
     - image: greenpeaceinternational/circleci-base:latest
+      auth: &docker_auth
   working_directory: /home/circleci/app
 
 job-references:
+  docker_auth: &docker_auth
+    username: $DOCKERHUB_USERNAME
+    password: $DOCKERHUB_PASSWORD
+
   setup_environment: &setup_environment
     name: "Setup Environment Variables"
     command: |
@@ -25,42 +30,7 @@ jobs:
       - run:
           name: "stylelint"
           when: always
-          command: stylelint "$HOME/app/src/**/*.scss" "$HOME/app/theme/kss-assets/css/*.scss"
-
-  test-a11y:
-    <<: *defaults
-    environment:
-      GOOGLE_PROJECT_ID: planet4-production
-    steps:
-      - setup_remote_docker:
-          docker_layer_caching: true
-      - checkout
-      - run: *setup_environment
-      - run: make -C deploy checkout
-      - run: make -C deploy build
-      - run: make -C deploy test-a11y
-      - run:
-          name: Analyse test results
-          command: |
-            errors=$(jq '.errors' ~/app/deploy/docker/source/pa11y/report.json)
-            if [ "$errors" -gt 0 ]; then echo "Errors found, see report in artifacts." && exit 1; else echo "No errors, report available in artifacts."; fi
-      - store_artifacts:
-          path: ~/app/deploy/docker/source/pa11y
-
-  deploy-dev:
-    <<: *defaults
-    environment:
-      GOOGLE_PROJECT_ID: planet4-production
-    steps:
-      - setup_remote_docker:
-          docker_layer_caching: true
-      - checkout
-      - run: activate-gcloud-account.sh
-      - run: docker-login.sh
-      - run: make -C deploy checkout-master
-      - run: make -C deploy docker-build
-      - run: make -C deploy docker-push
-      - run: make -C deploy dev
+          command: stylelint "$HOME/app/src/**/*.scss"
 
   promote:
     <<: *defaults
@@ -76,7 +46,7 @@ jobs:
           command: |
             mkdir -p /tmp/workspace
             cd /tmp/workspace
-            trigger-build.sh git@github.com:${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME} master
+            trigger-build.sh git@github.com:${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME} tag
 
   repositories:
     <<: *defaults
@@ -91,64 +61,19 @@ jobs:
           name: Bump styleguide
           command: bump-styleguide.sh
 
-  deploy-tag:
-    <<: *defaults
-    environment:
-      GOOGLE_PROJECT_ID: planet4-production
-    steps:
-      - setup_remote_docker:
-          docker_layer_caching: true
-      - checkout
-      - run: activate-gcloud-account.sh
-      - run: docker-login.sh
-      - run: make -C deploy checkout-tag
-      - run: make -C deploy docker-build
-      - run: make -C deploy test-a11y
-      - run: make -C deploy docker-push
-      - run: make -C deploy prod
-      - store_artifacts:
-          path: ~/app/deploy/docker/source/pa11y
-
 workflows:
-  dev:
+  branch:
     jobs:
       - lint
-      - test-a11y
-      - deploy-dev:
-          context: org-global
-          requires:
-            - lint
-          filters:
-            branches:
-              only: master
-      - hold:
-          type: approval
-          requires:
-            - deploy-dev
-          filters:
-            branches:
-              only: master
       - promote:
           context: org-global
-          requires:
-            - hold
           filters:
             branches:
-              only: master
+              only: main
       - repositories:
           context: org-global
           requires:
             - promote
           filters:
             branches:
-              only: master
-
-  tag:
-    jobs:
-      - deploy-tag:
-          context: org-global
-          filters:
-            branches:
-              ignore: /.*/
-            tags:
-              only: /.*/
+              only: main
