--- a/.stylelintrc
+++ b/.stylelintrc
@@ -87,6 +87,7 @@
     "no-unknown-animations": true,
     "no-invalid-double-slash-comments": true,
     "no-missing-end-of-source-newline": true,
-    "max-empty-lines": 1
+    "max-empty-lines": 1,
+    "property-no-vendor-prefix": true
   }
 }
