--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,7 @@
     "stevegrunwell/phpunit-markup-assertions": "^1.2",
     "phpunit/phpunit": "^6.2"
   },
-  "require": {
-    "greenpeace/github-archive-installer": "~1.3.2"
-  },
+  "require": {},
   "scripts": {
     "fixes": "vendor/bin/phpcbf",
     "sniffs": "vendor/bin/phpcs"
