--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
     "webpack-fix-style-only-entries": "^0.3.1"
   },
   "dependencies": {
+    "@greenpeace/planet4-postcss-css-variables": "^0.2.0",
     "classnames": "^2.2.6",
     "font-picker-react": "^3.5.2",
     "jest-environment-node": "^26.0.1",
     "photoswipe": "^4.1.3",
-    "postcss-css-variables-extract": "^0.1.2",
     "react-color": "^2.19.3",
     "react-hotkeys-hook": "^3.0.3",
     "tinycolor2": "^1.4.2"
