--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,10 @@ workflows:
           type: approval
           requires:
             - request-instance
+      - comment-pr:
+          context: org-global
+          requires:
+            - instance-ready
       - lighthouse:
           requires:
             - instance-ready
@@ -269,6 +273,21 @@ jobs:
           paths:
             - test-instance
             - booking.json
+            - pr
+
+  comment-pr:
+    docker:
+      - image: greenpeaceinternational/circleci-base:latest
+        auth: &docker_auth
+    steps:
+      - attach_workspace:
+          at: /tmp/workspace
+      - run:
+          name: Post comment to PR
+          command: |
+            post-comment-to-pr.py \
+            --pr-url $(cat /tmp/workspace/pr) \
+            --test-instance $(cat /tmp/workspace/test-instance)
 
   lighthouse:
     executor: lighthouse-check/default
