PLANET-6114 Add commitlint CI job
Ref: https://jira.greenpeace.org/browse/PLANET-6114

---

Added some very basic rules based on what we [already do](https://support.greenpeace.org/planet4/development/git-guidelines).

[Documentation](https://github.com/conventional-changelog/commitlint/blob/master/docs/reference-rules.md)

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:css": "wp-scripts lint-style"
   },
   "devDependencies": {
+    "@commitlint/cli": "^12.1.1",
     "@greenpeace/dashdash": "^1.1.1",
     "@wordpress/components": "^8.3.2",
     "@wordpress/scripts": "3.3.0",
