--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "webpack-fix-style-only-entries": "^0.3.1"
   },
   "dependencies": {
-    "@greenpeace/planet4-postcss-css-variables": "^0.2.0",
+    "balanced-match": "^2.0.0",
     "classnames": "^2.2.6",
     "font-picker-react": "^3.5.2",
     "jest-environment-node": "^26.0.1",
