--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,9 @@
       "vendor/plugins/{$name}/": ["type:wordpress-plugin"]
     }
   },
-  "require": {},
+  "require": {
+    "alek13/slack": "^2.0"
+  },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.5.8",
     "wp-coding-standards/wpcs": "^2.2.0",
