--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-nullish-coalescing-operator": "*",
     "@babel/plugin-proposal-optional-chaining": "*",
+    "@commitlint/cli": "^12.1.4",
     "@greenpeace/dashdash": "^1.1.1",
     "@wordpress/components": "^8.3.2",
     "@wordpress/data": "^4.9.2",
