--- a/composer.json
+++ b/composer.json
@@ -35,9 +35,7 @@
       "vendor/plugins/{$name}/": ["type:wordpress-plugin"]
     }
   },
-  "require": {
-    "greenpeace/github-archive-installer": "~1.3.2"
-  },
+  "require": {},
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.5.8",
     "wp-coding-standards/wpcs": "^2.2.0",
