--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -337,6 +337,12 @@ jobs:
           name: Remove unnecessary files
           command: rm -rf .circleci .git .githooks assets/src bin tests
       - run:
+          name: Inject version to composer
+          command: |
+            apk add jq
+            cat composer.json | jq --arg version ${CIRCLE_TAG} '. + {version: $version}' > tmp.json
+            mv -f tmp.json composer.json
+      - run:
           name: Create zip file
           command: zip -r /tmp/workspace/planet4-plugin-gutenberg-blocks.zip . -x "node_modules/*"
       - run:
