--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "phpunit/phpunit": "^6.2"
   },
   "require": {
-    "greenpeace/github-archive-installer": "1.3"
+    "greenpeace/github-archive-installer": "~1.3.2"
   },
   "scripts": {
     "fixes": "vendor/bin/phpcbf",
