--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -243,7 +243,7 @@ jobs:
           at: /tmp/workspace
       - run:
           name: Check if this is for an open PR
-          command: check-pr-exists.sh $(cat /tmp/workspace/commit-message)
+          command: check-pr-exists.sh "$(cat /tmp/workspace/commit-message)"
       - run:
           name: Book instance
           command: |
