--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -133,7 +133,7 @@ commands:
       - run:
           name: Test - Clone planet4-docker-compose
           command: |
-            git clone --depth 1 https://github.com/greenpeace/planet4-docker-compose
+            git clone --single-branch --branch remove-coverage --depth 1 https://github.com/greenpeace/planet4-docker-compose
 
   run-tests:
     parameters:
