--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,7 @@ workflows:
   branch:
     jobs:
       - php73-tests
+      - php74-tests
       - frontend-tests
       - acceptance-tests
       - commitlint
@@ -180,6 +181,14 @@ jobs:
     <<: *php_job
     docker:
       - image: greenpeaceinternational/p4-unit-tests:php7.3
+        auth: &docker_auth
+      - image: circleci/mysql:5.7.26
+        auth: &docker_auth
+
+  php74-tests:
+    <<: *php_job
+    docker:
+      - image: greenpeaceinternational/p4-unit-tests:php7.4-php74
         auth: &docker_auth
       - image: circleci/mysql:5.7.26
         auth: &docker_auth
