--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -188,7 +188,7 @@ jobs:
   php74-tests:
     <<: *php_job
     docker:
-      - image: greenpeaceinternational/p4-unit-tests:php7.4-php74
+      - image: greenpeaceinternational/p4-unit-tests:php7.4
         auth: &docker_auth
       - image: circleci/mysql:5.7.26
         auth: &docker_auth
