Fix eslint errors
Update eslint configuration for ecma version, `wp` global var.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -223,7 +223,8 @@ jobs:
             changed_files=$(git diff --name-only master...HEAD public/js tests/js assets/src | grep "\.js$")
             echo "Changed files:"
             echo $changed_files | tr " " "\n"
-            eslint --ext .js $(echo "$changed_files" | xargs)
+            if [ -z "$changed_files" ]; then exit 0; fi
+            npm install && eslint --ext .js $(echo "$changed_files" | xargs)
       - store_test_results:
           path: /tmp/test-results
 
