PLANET-3642 Use arrow syntax for functions
Ref: https://jira.greenpeace.org/browse/PLANET-3642
Ref: https://eslint.org/docs/rules/prefer-arrow-callback

---

Added specific rule and fixed relevant issues.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,11 @@
       "error",
       "always"
     ],
+    "prefer-arrow-callback": [
+      "error", {
+        "allowNamedFunctions": true
+      }
+    ],
     "new-cap": "error",
     "no-var": 1,
     "react/jsx-uses-react": "error",
