--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@wordpress/e2e-test-utils": "^4.5.0",
     "@wordpress/scripts": "3.3.0",
     "autoprefixer": "^9.7.0",
-    "bootstrap": "^5.0.0-beta2",
+    "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
     "css-loader": "^3.2.0",
     "eslint-plugin-react": "^7.20.3",
