Make sure unit tests run on the right WP version
We can fetch the WP version from the base repo. It's a bit hackish but
it allows us to avoid hardcoding a WP version here (which we'll probably
forget to ever update).

Added also `yoast/phpunit-polyfills`, required by `5.8.2`.

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "wp-coding-standards/wpcs": "^2.2.0",
     "dealerdirect/phpcodesniffer-composer-installer": "^0.7.1",
     "stevegrunwell/phpunit-markup-assertions": "^1.2",
-    "phpunit/phpunit": "^6.2"
+    "phpunit/phpunit": "^6.2",
+    "yoast/phpunit-polyfills": "^1.0"
   },
   "require": {},
   "scripts": {
