--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,7 +81,9 @@ job-references:
           command: |
             mkdir -p /tmp/test-results/phpunit
             rm -rf $WP_TESTS_DIR $WP_CORE_DIR
-            bash bin/install-wp-tests.sh wordpress_test root '' 127.0.0.1 latest
+            base=$(curl -s https://raw.githubusercontent.com/greenpeace/planet4-base/main/composer.json)
+            WP_VERSION=$(jq -r '.extra["wp-version"] // empty' \<<< "${base}")
+            bash bin/install-wp-tests.sh wordpress_test root '' 127.0.0.1 $WP_VERSION
             XDEBUG_MODE=coverage vendor/bin/phpunit --log-junit /tmp/test-results/phpunit/$CIRCLE_STAGE.xml --coverage-html /tmp/coverage-report --coverage-text
       - store_test_results:
           path: /tmp/test-results
