--- a/composer.json
+++ b/composer.json
@@ -42,9 +42,10 @@
     "squizlabs/php_codesniffer": "^3.5.8",
     "wp-coding-standards/wpcs": "^2.2.0",
     "dealerdirect/phpcodesniffer-composer-installer": "^0.7.1",
-    "stevegrunwell/phpunit-markup-assertions": "^1.2",
-    "phpunit/phpunit": "^6.2",
-    "wpackagist-plugin/timber-library": "1.18.*"
+    "stevegrunwell/phpunit-markup-assertions": "^1.3",
+    "phpunit/phpunit": "^7.5",
+    "wpackagist-plugin/timber-library": "1.18.*",
+    "yoast/phpunit-polyfills": "^1.0"
   },
   "scripts": {
     "fixes": "vendor/bin/phpcbf",
