--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "classnames": "^2.2.6",
     "jest-environment-node": "^26.0.1",
     "photoswipe": "^4.1.3",
-    "react-dom": "^18.2.0",
-    "use-theme-editor": "^1.3.7"
+    "react-dom": "^18.2.0"
   }
 }
