PLANET-6680: Page Header block pattern (#860)
* PLANET-6680: Page Header block pattern

Ref: https://jira.greenpeace.org/browse/PLANET-6680

Page header with image pattern, right, left, and ltr versions, available in pattern and block variation
Mockup: https://zeroheight.com/05f6e9516/v/latest/p/1285c9-page-header/b/88c480

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -88,6 +88,6 @@
     "no-invalid-double-slash-comments": true,
     "no-missing-end-of-source-newline": true,
     "max-empty-lines": 1,
-    "property-no-vendor-prefix": true
+    "property-no-vendor-prefix": [true, {"ignoreProperties": ["box-orient","line-clamp"]}]
   }
 }
