PLANET-6902: Site name appears twice in html title tag
Ref: https://jira.greenpeace.org/browse/PLANET-6902

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -226,6 +226,7 @@ jobs:
 
   acceptance-tests:
     <<: *p4_instance_conf
+    resource_class: large
     steps:
       - install-instance
       - run-tests:
